@@ -6,8 +6,12 @@ public class ModuleGraph {
 
     public static final String JAVA_OPTIONS = "javaOptions";
     private static final String SELF_CONTAINED = "selfContainedModuleGraph";
-    private static final String ADD_MODULES = "--add-modules", ROOTS = "ALL-MODULE-PATH,ALL-DEFAULT";
+    private static final String ADD_MODULES = "--add-modules", ROOTS = "ALL-MODULE-PATH,ALL-DEFAULT",
+            ENABLE_NATIVE_ACCESS = "--enable-native-access", ALL_UNNAMED = "ALL-UNNAMED",
+            LAYER_NATIVE_ACCESS = "-Djlayer.enableNativeAccess.";
 
+    private final SequencedSet<String> nativeAccess = new LinkedHashSet<>();
+    private final SequencedMap<String, SequencedSet<String>> layerAccess = new TreeMap<>();
     private boolean modular, automatic, unnamed;
 
     public void place(PathPlacement placement, Path file, List<String> modulePath, List<String> classPath)
@@ -34,21 +38,72 @@ public class ModuleGraph {
         unnamed = true;
     }
 
+    public void enableNativeAccess(String module) {
+        nativeAccess.add(module == null ? ALL_UNNAMED : module);
+    }
+
+    public void enableNativeAccess(Path file, boolean module) {
+        nativeAccess.add(module ? name(file) : ALL_UNNAMED);
+    }
+
+    public void enableNativeAccess(String layer, Path file, boolean module) {
+        if (module) {
+            layerAccess.computeIfAbsent(layer, _ -> new LinkedHashSet<>()).add(name(file));
+        } else {
+            nativeAccess.add(ALL_UNNAMED);
+        }
+    }
+
+    private static String name(Path file) {
+        ModuleDescriptor descriptor = PathPlacement.moduleDescriptor(file);
+        if (descriptor == null) {
+            Set<ModuleReference> references = ModuleFinder.of(file).findAll();
+            if (references.size() != 1) {
+                throw new IllegalStateException("Cannot grant native access to "
+                        + file
+                        + ", which is placed on the module path but describes no module");
+            }
+            descriptor = references.iterator().next().descriptor();
+        }
+        return descriptor.name();
+    }
+
+    private List<String> nativeAccessOptions() {
+        List<String> options = new ArrayList<>();
+        if (!nativeAccess.isEmpty()) {
+            options.add(ENABLE_NATIVE_ACCESS + "=" + String.join(",", nativeAccess));
+        }
+        layerAccess.forEach((layer, modules) -> options.add(LAYER_NATIVE_ACCESS + layer + "=" + String.join(",", modules)));
+        return options;
+    }
+
     private boolean selfContained() {
         return !modular || !automatic && !unnamed;
     }
 
     public List<String> arguments() {
-        return selfContained() ? List.of() : List.of(ADD_MODULES, ROOTS);
+        List<String> arguments = new ArrayList<>();
+        if (!selfContained()) {
+            arguments.add(ADD_MODULES);
+            arguments.add(ROOTS);
+        }
+        arguments.addAll(nativeAccessOptions());
+        return arguments;
     }
 
     public List<String> options() {
-        return selfContained() ? List.of() : List.of(ADD_MODULES + "=" + ROOTS);
+        List<String> options = new ArrayList<>();
+        if (!selfContained()) {
+            options.add(ADD_MODULES + "=" + ROOTS);
+        }
+        options.addAll(nativeAccessOptions());
+        return options;
     }
 
     public void store(SequencedProperties properties) {
-        if (!selfContained()) {
-            properties.setProperty(JAVA_OPTIONS, String.join(" ", options()));
+        List<String> options = options();
+        if (!options.isEmpty()) {
+            properties.setProperty(JAVA_OPTIONS, String.join(" ", options));
         }
     }
 
